Change groupID